# CDAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CString.h  cdlist.h  chashtable.h  cstring.h  ctest.h
src/: CString.c  CTest.c  cdlist.c  chashtable.c  cstring.c  ctest.c
test/: test_cstring.c  test_string.c
test/benchmark/: CMakeLists.txt  benchmark_cdlist.cpp  benchmark_cstring.cpp
test/test/: CMakeLists.txt  test_cdlist.c  test_cstring.c
