if(TEST_TEST)
  file(GLOB_RECURSE test CMAKE_CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/test/test/*.c")
  foreach(testfile IN LISTS test)
      get_filename_component(testname ${testfile} NAME_WE)
      add_executable(${testname} ${testfile})
      target_link_libraries(${testname} PRIVATE ${CMAKE_PROJECT_NAME})
      target_include_directories(${testname} PRIVATE "${CMAKE_SOURCE_DIR}/include")
      target_compile_options(${testname} PRIVATE "-Wall" "-O0")
  endforeach()
endif()
